# CubeStudioMusic

./: README.md  project_template.json
core/cpp/: AI_IPC_Manager.cpp  AI_IPC_Manager.h  AudioManager.cpp  AudioManager.h  DSP_Filters.cpp  DSP_Filters.h  audio_settings.h
core/cpp/tests/: DSP_Tests.cpp
core/python/: ai_config.json  ai_processor.py  ai_runner.py
platform/android/app/: build.gradle
platform/android/app/src/main/cpp/: CMakeLists.txt  jni_wrapper.cpp
platform/android/app/src/main/java/com/cubemusic/studio/: MainActivity.kt
platform/windows/: binding.gyp  main.js  node_addon_wrapper.cpp  package.json  preload.js
